Blockbased API needs to update last to EOO when finishMissing

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc4
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Integration
    • Fully Compatible
    • ALL
    • v8.0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In the iterative API, after the interleaved mode, our lastValue is set to EOO, however, in the blockBased API the last value remains true. This is the output for the iterative API:

      [ undefined ], : [ false ], : [ true ], : [ true ], EOO, EOO, EOO, EOO, EOO, EOO, EOO, EOO, EOO, EOO, EOO, EOO, EOO, EOO, EOO, EOO, EOO, EOO, EOO, EOO......

            Assignee:
            Naama Bareket
            Reporter:
            Naama Bareket
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: