SERVER-89612: Blockbased API needs to update last to EOO when finishMissing (#21323)

GitOrigin-RevId: 360cd03c5f9c1306a9d6b85b4b59dd184a28cc8b